--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+	<groupId>org.codehaus.jackson</groupId>
+	<artifactId>jackson-core-lgpl</artifactId>
+	<version>1.9.13</version>
+</dependency>
+
+        <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>hibernate-jpamodelgen-1.3.0.Final</artifactId>
             <version>SNAPSHOT</version>
