Fix EJB injection issue, related to local interface.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -2,167 +2,6 @@ PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
 
-CategoryCreated=Category was successfully created.
-CategoryUpdated=Category was successfully updated.
-CategoryDeleted=Category was successfully deleted.
-CreateCategoryTitle=Create New Category
-CreateCategorySaveLink=Save
-CreateCategoryShowAllLink=Show All Category Items
-CreateCategoryIndexLink=Index
-CreateCategoryLabel_id=Id:
-CreateCategoryRequiredMessage_id=The Id field is required.
-CreateCategoryTitle_id=Id
-CreateCategoryLabel_name=Name:
-CreateCategoryRequiredMessage_name=The Name field is required.
-CreateCategoryTitle_name=Name
-CreateCategoryLabel_isActive=IsActive:
-CreateCategoryTitle_isActive=IsActive
-EditCategoryTitle=Edit Category
-EditCategorySaveLink=Save
-EditCategoryViewLink=View
-EditCategoryShowAllLink=Show All Category Items
-EditCategoryIndexLink=Index
-EditCategoryLabel_id=Id:
-EditCategoryRequiredMessage_id=The Id field is required.
-EditCategoryTitle_id=Id
-EditCategoryLabel_name=Name:
-EditCategoryRequiredMessage_name=The Name field is required.
-EditCategoryTitle_name=Name
-EditCategoryLabel_isActive=IsActive:
-EditCategoryTitle_isActive=IsActive
-ViewCategoryTitle=View
-ViewCategoryDestroyLink=Destroy
-ViewCategoryEditLink=Edit
-ViewCategoryCreateLink=Create New Category
-ViewCategoryShowAllLink=Show All Category Items
-ViewCategoryIndexLink=Index
-ViewCategoryLabel_id=Id:
-ViewCategoryTitle_id=Id
-ViewCategoryLabel_name=Name:
-ViewCategoryTitle_name=Name
-ViewCategoryLabel_isActive=IsActive:
-ViewCategoryTitle_isActive=IsActive
-ListCategoryTitle=List
-ListCategoryEmpty=(No Category Items Found)
-ListCategoryDestroyLink=Destroy
-ListCategoryEditLink=Edit
-ListCategoryViewLink=View
-ListCategoryCreateLink=Create New Category
-ListCategoryIndexLink=Index
-ListCategoryTitle_id=Id
-ListCategoryTitle_name=Name
-ListCategoryTitle_isActive=IsActive
-CollectionCreated=Collection was successfully created.
-CollectionUpdated=Collection was successfully updated.
-CollectionDeleted=Collection was successfully deleted.
-CreateCollectionTitle=Create New Collection
-CreateCollectionSaveLink=Save
-CreateCollectionShowAllLink=Show All Collection Items
-CreateCollectionIndexLink=Index
-CreateCollectionLabel_id=Id:
-CreateCollectionRequiredMessage_id=The Id field is required.
-CreateCollectionTitle_id=Id
-CreateCollectionLabel_name=Name:
-CreateCollectionRequiredMessage_name=The Name field is required.
-CreateCollectionTitle_name=Name
-CreateCollectionLabel_userId=UserId:
-CreateCollectionRequiredMessage_userId=The UserId field is required.
-CreateCollectionTitle_userId=UserId
-EditCollectionTitle=Edit Collection
-EditCollectionSaveLink=Save
-EditCollectionViewLink=View
-EditCollectionShowAllLink=Show All Collection Items
-EditCollectionIndexLink=Index
-EditCollectionLabel_id=Id:
-EditCollectionRequiredMessage_id=The Id field is required.
-EditCollectionTitle_id=Id
-EditCollectionLabel_name=Name:
-EditCollectionRequiredMessage_name=The Name field is required.
-EditCollectionTitle_name=Name
-EditCollectionLabel_userId=UserId:
-EditCollectionRequiredMessage_userId=The UserId field is required.
-EditCollectionTitle_userId=UserId
-ViewCollectionTitle=View
-ViewCollectionDestroyLink=Destroy
-ViewCollectionEditLink=Edit
-ViewCollectionCreateLink=Create New Collection
-ViewCollectionShowAllLink=Show All Collection Items
-ViewCollectionIndexLink=Index
-ViewCollectionLabel_id=Id:
-ViewCollectionTitle_id=Id
-ViewCollectionLabel_name=Name:
-ViewCollectionTitle_name=Name
-ViewCollectionLabel_userId=UserId:
-ViewCollectionTitle_userId=UserId
-ListCollectionTitle=List
-ListCollectionEmpty=(No Collection Items Found)
-ListCollectionDestroyLink=Destroy
-ListCollectionEditLink=Edit
-ListCollectionViewLink=View
-ListCollectionCreateLink=Create New Collection
-ListCollectionIndexLink=Index
-ListCollectionTitle_id=Id
-ListCollectionTitle_name=Name
-ListCollectionTitle_userId=UserId
-ImageCreated=Image was successfully created.
-ImageUpdated=Image was successfully updated.
-ImageDeleted=Image was successfully deleted.
-CreateImageTitle=Create New Image
-CreateImageSaveLink=Save
-CreateImageShowAllLink=Show All Image Items
-CreateImageIndexLink=Index
-CreateImageLabel_id=Id:
-CreateImageRequiredMessage_id=The Id field is required.
-CreateImageTitle_id=Id
-CreateImageLabel_fileName=FileName:
-CreateImageRequiredMessage_fileName=The FileName field is required.
-CreateImageTitle_fileName=FileName
-CreateImageLabel_description=Description:
-CreateImageTitle_description=Description
-CreateImageLabel_userId=UserId:
-CreateImageRequiredMessage_userId=The UserId field is required.
-CreateImageTitle_userId=UserId
-EditImageTitle=Edit Image
-EditImageSaveLink=Save
-EditImageViewLink=View
-EditImageShowAllLink=Show All Image Items
-EditImageIndexLink=Index
-EditImageLabel_id=Id:
-EditImageRequiredMessage_id=The Id field is required.
-EditImageTitle_id=Id
-EditImageLabel_fileName=FileName:
-EditImageRequiredMessage_fileName=The FileName field is required.
-EditImageTitle_fileName=FileName
-EditImageLabel_description=Description:
-EditImageTitle_description=Description
-EditImageLabel_userId=UserId:
-EditImageRequiredMessage_userId=The UserId field is required.
-EditImageTitle_userId=UserId
-ViewImageTitle=View
-ViewImageDestroyLink=Destroy
-ViewImageEditLink=Edit
-ViewImageCreateLink=Create New Image
-ViewImageShowAllLink=Show All Image Items
-ViewImageIndexLink=Index
-ViewImageLabel_id=Id:
-ViewImageTitle_id=Id
-ViewImageLabel_fileName=FileName:
-ViewImageTitle_fileName=FileName
-ViewImageLabel_description=Description:
-ViewImageTitle_description=Description
-ViewImageLabel_userId=UserId:
-ViewImageTitle_userId=UserId
-ListImageTitle=List
-ListImageEmpty=(No Image Items Found)
-ListImageDestroyLink=Destroy
-ListImageEditLink=Edit
-ListImageViewLink=View
-ListImageCreateLink=Create New Image
-ListImageIndexLink=Index
-ListImageTitle_id=Id
-ListImageTitle_fileName=FileName
-ListImageTitle_description=Description
-ListImageTitle_userId=UserId
 UserCreated=User was successfully created.
 UserUpdated=User was successfully updated.
 UserDeleted=User was successfully deleted.
@@ -186,6 +25,9 @@ CreateUserRequiredMessage_username=The Username field is required.
 CreateUserTitle_username=Username
 CreateUserLabel_email=Email:
 CreateUserTitle_email=Email
+CreateUserLabel_password=Password:
+CreateUserRequiredMessage_password=The Password field is required.
+CreateUserTitle_password=Password
 EditUserTitle=Edit User
 EditUserSaveLink=Save
 EditUserViewLink=View
@@ -207,6 +49,9 @@ EditUserRequiredMessage_username=The Username field is required.
 EditUserTitle_username=Username
 EditUserLabel_email=Email:
 EditUserTitle_email=Email
+EditUserLabel_password=Password:
+EditUserRequiredMessage_password=The Password field is required.
+EditUserTitle_password=Password
 ViewUserTitle=View
 ViewUserDestroyLink=Destroy
 ViewUserEditLink=Edit
@@ -225,6 +70,8 @@ ViewUserLabel_username=Username:
 ViewUserTitle_username=Username
 ViewUserLabel_email=Email:
 ViewUserTitle_email=Email
+ViewUserLabel_password=Password:
+ViewUserTitle_password=Password
 ListUserTitle=List
 ListUserEmpty=(No User Items Found)
 ListUserDestroyLink=Destroy
@@ -238,3 +85,4 @@ ListUserTitle_lastName=LastName
 ListUserTitle_avatar=Avatar
 ListUserTitle_username=Username
 ListUserTitle_email=Email
+ListUserTitle_password=Password
