--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-	<groupId>org.codehaus.jackson</groupId>
-	<artifactId>jackson-core-lgpl</artifactId>
-	<version>1.9.13</version>
-</dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-lgpl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
 
         <dependency>
             <groupId>unknown.binary</groupId>
@@ -39,6 +39,18 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.0.7.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-multipart-provider</artifactId>
+            <version>3.0.7.Final</version>
+
+        </dependency>
+
     </dependencies>
 
     <build>
