--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,20 @@
             <artifactId>jackson-core-lgpl</artifactId>
             <version>1.9.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-security</artifactId>
+            <version>7.1.1.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.picketlink</groupId>
+            <artifactId>picketlink</artifactId>
+            <version>2.6.1.Final</version>
+            <scope>compile</scope>
+        </dependency>
+
+
 
         <dependency>
             <groupId>unknown.binary</groupId>
